--- a/i3/config
+++ b/i3/config
@@ -195,13 +195,13 @@ bindsym $mod+x move workspace to output right
 # Put this window on the presentation output.
 bindsym $mod+Shift+x move container to output VGA1
 
-# Put this window on the presentation output.
+# Configure displays.
 bindsym $mod+Shift+Tab exec ~/.i3/screenconf
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command i3status
+  status_command ~/.i3/kbstat
   position top
   tray_output primary
   colors {
@@ -227,8 +227,10 @@ exec --no-startup-id xrandr --output DP1 --auto --primary --output eDP1 --auto -
 exec --no-startup-id i3-msg 'workspace "1: www"; exec firefox; workspace "2: xmpp"; exec pidgin; exec --no-startup-id dunst -conf ~/.i3/dunstrc; workspace "3: home"; exec i3-sensible-terminal -e ssh 89.177.30.0'
 
 # Keyboard Layouts
-exec --no-startup-id setxkbmap us,sk,cz -variant ,qwerty,qwerty
-exec  --no-startup-id setxkbmap -option 'grp:ctrl_alt_toggle'
+# exec --no-startup-id setxkbmap us,sk,cz -variant ,qwerty,qwerty
+# exec --no-startup-id setxkbmap -option 'grp:ctrl_alt_toggle'
+# Handled by script now
+bindsym $mod+Shift+a exec ~/.i3/cyclekb
 
 # NumLock
 exec --no-startup-id numlockx on
