--- a/i3/config
+++ b/i3/config
@@ -9,15 +9,16 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-#set $mod Mod1
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
+font pango:Terminus 10
+
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
-font pango:Terminus 10
+
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -30,7 +31,6 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
-#bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -93,12 +93,9 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-# bindsym $mod+1 workspace 1
-bindsym $mod+1 workspace "1: www"
-# bindsym $mod+2 workspace 2
-bindsym $mod+2 workspace "2: xmpp"
-#bindsym $mod+3 workspace 3
-bindsym $mod+3 workspace "3: home"
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
@@ -108,12 +105,9 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-#bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+1 move container to workspace "1: www"
-#bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+2 move container to workspace "2: xmpp"
-#bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+3 move container to workspace "3: home"
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
@@ -167,7 +161,6 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Lock Screen, Suspend
-#bindsym Mod4+l exec i3lock
 bindsym $mod+Ctrl+l exec ~/.i3/lock
 bindsym $mod+Ctrl+s exec systemctl suspend
 
@@ -184,7 +177,7 @@ bindsym XF86AudioMute exec amixer -q sset Master toggle
 bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 3
 bindsym XF86MonBrightnessDown exec /usr/bin/xbacklight -dec 3
 
-#kebyboard LED  brightness
+#kebyboard LED brightness
 bindsym XF86KbdBrightnessDown exec /usr/bin/kbdlight down
 bindsym XF86KbdBrightnessUp   exec /usr/bin/kbdlight up
 
@@ -224,11 +217,9 @@ client.urgent #d33682 #d33682 #fdf6e3 #dc322f
 exec --no-startup-id xrandr --output DP1 --auto --primary --output eDP1 --auto --right-of DP1
 
 # Startup setup
-exec --no-startup-id i3-msg 'workspace "1: www"; exec firefox; workspace "2: xmpp"; exec pidgin; exec --no-startup-id dunst -conf ~/.i3/dunstrc; workspace "3: home"; exec i3-sensible-terminal -e ssh 89.177.30.0'
+exec --no-startup-id i3-msg ; exec --no-startup-id xsetroot -solid "#123456"; exec --no-startup-id dunst -conf ~/.i3/dunstrc;
 
 # Keyboard Layouts
-# exec --no-startup-id setxkbmap us,sk,cz -variant ,qwerty,qwerty
-# exec --no-startup-id setxkbmap -option 'grp:ctrl_alt_toggle'
 # Handled by script now
 bindsym $mod+Shift+a exec ~/.i3/cyclekb
 
@@ -239,4 +230,4 @@ exec --no-startup-id numlockx on
 exec --no-startup-id nm-applet
 
 # Copy.com
-exec --nostartup-id /home/juraj/copy/x86_64/CopyAgent &
+# exec --nostartup-id ~/copy/x86_64/CopyAgent &
