--- a/i3/config
+++ b/i3/config
@@ -44,7 +44,7 @@ bindsym $mod+d exec dmenu_run
 
 # change focus
 bindsym $mod+j focus left
-bindsym $mod+k focus down
+bindsym $mod+k focus bottom
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
@@ -76,8 +76,8 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+#bindsym $mod+s layout stacking
+#bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
@@ -174,7 +174,8 @@ bindsym XF86AudioLowerVolume exec amixer -q sset Master 2%- unmute
 bindsym XF86AudioMute exec amixer -q sset Master toggle
 
 # Screen brightness
-bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 3
+#bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 10
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec /usr/bin/xbacklight -dec 3
 
 #kebyboard LED brightness
@@ -194,11 +195,12 @@ bindsym $mod+Shift+Tab exec ~/.i3/screenconf
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command ~/.i3/kbstat
-  position top
+  #status_command ~/.i3/kbstat
+  status_command i3status --config ~/.i3status.conf
+  position bottom
   tray_output primary
   colors {
-    separator #dc322f
+    separator #5f8700
     background #002b36
     statusline #268bd2
     focused_workspace #fdf6e3 #859900 #fdf6e3
