--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -9,11 +9,15 @@
 general {
         colors = true
         interval = 1
+        color_good = "#00FF00"
+        color_bad = "#FF0000"
+        color_degraded = "#FFFF00"
+        color_separator = "#5F8700"
 }
 
 order += "volume master"
 order += "disk /"
-order += "ethernet enp0s3"
+order += "wireless wlp2s0b1"
 order += "battery 0"
 order += "load"
 order += "tztime local"
@@ -27,14 +31,16 @@ volume master {
     #format = "À %volume "
 }
 
-ethernet enp0s3 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
-}
+wireless wlp2s0b1 {
+                   format_up = "W: (%quality at %essid, %bitrate) %ip"
+                   format_down = "W: down"
+}           
+
 
 battery 0 {
         format = "%status %percentage %remaining"
+        low_threshold = 20
+        threshold_type = "percentage"
 }
 
 
