Ethernet added into statusbar

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -18,6 +18,7 @@ general {
 order += "volume master"
 order += "disk /"
 order += "wireless wlp2s0b1"
+order += "ethernet enp0s20u2u2u4"
 order += "battery 0"
 order += "load"
 order += "tztime local"
@@ -34,7 +35,12 @@ volume master {
 wireless wlp2s0b1 {
                    format_up = "W: (%quality at %essid, %bitrate) %ip"
                    format_down = "W: down"
-}           
+}
+
+ethernet enp0s20u2u2u4 {
+                        format_up = "E: %ip (%speed)"
+                        format_down = "E: down"
+}
 
 
 battery 0 {
